# Asparagus

./: .readthedocs.yaml  README.md  pyproject.toml  run_test.py  setup.py
asparagus/: GENERAL_BATCH.txt  __init__.py  asparagus.py
asparagus/data/: database.py  database_hdf5.py  database_npz.py  database_sqlite3.py  datacontainer.py  dataloader.py  datareader.py  dataset.py  datastats.py
asparagus/interface/: __init__.py  ase_model.py  model_ase.py  model_openmm.py  model_pycharmm.py  openmm_ase.py  orca_ase.py  shell_ase.py  slurm_ase.py
asparagus/layer/: activation.py  base.py  cutoff.py  layer_painn.py  layer_physnet.py  layers_painn.py  layers_physnet.py  radial.py
asparagus/model/: __init__.py  amp.py  basemodel.py  calculator.py  ensemble.py  filemanager.py  painn.py  physnet.py
asparagus/module/: __init__.py  dispersion.py  electrostatics.py  graph.py  input.py  module_amp.py  module_painn.py  module_physnet.py  neighborlist.py  output.py  painn_modules.py  physnet_modules.py  repulsion.py
asparagus/sampling/: __init__.py  mc.py  md.py  meta.py  nms.py  sampler.py
asparagus/settings/: __init__.py  config.py  default.py  dtypes.py  properties.py
asparagus/templates/: __init__.py  shell.py
asparagus/templates/shell/: run_orca.sh  run_orca_mp2.inp  run_orca_mp2.py  run_orca_mp2.sh
asparagus/templates/slurm/: run_molpro.inp  run_molpro.py  run_molpro.sh
asparagus/tools/: AdaptiveSampling.py  DMC.py  EnsembleLearning.py  HyperParameterTuning.py  MDP.py  __init__.py
asparagus/training/: __init__.py  ensemble.py  optimizer.py  scaling.py  scheduler.py  tester.py  trainer.py
asparagus/utils/: __init__.py  check_dtype.py  check_properties.py  functions.py  output.py
docs/: requirements.yaml
docs/source/: about.rst  conf.py  example.rst  index.rst  installation.rst
docs/source/api/: asparagus.data.rst  asparagus.interface.rst  asparagus.layer.rst  asparagus.model.rst  asparagus.module.rst  asparagus.rst  asparagus.sampling.rst  asparagus.settings.rst  asparagus.templates.rst  asparagus.tools.rst  asparagus.training.rst  asparagus.utils.rst
examples/Argon_Water/: README
examples/Argon_Water/ase_orca_pbe/: ar_h2o.xyz  run.py  train_painn.json
examples/Argon_Water/ensemble_training/: ar_water.db  data_run.py  run.py  (+1 more)
examples/Hexaaquairon3/: hexaaquairon3_hs.xyz  run1_sampling_hs.py  run2_training_hs.py
examples/NH3_DMC/: run1_nh3_train.py  run2_nh3_dmc.py
examples/NH3_model/: run_nh3_eval.py
examples/NH3_pbe/: run_nh3_eval.py
examples/Zundel_meta/: run_zundel.py
examples/vpt2_example/: asp_energy_forces.py  asp_freq.py  asp_vpt2.com  goptimizer.py  opt_min.com  readme
test/: run_test.py
verification/: run_check.py  verify_dispersion.py  verify_electrostatics.py
verification/grimme_d3/: rc6.npy  refcn.csv
(+31 files in other folders)
