[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "asparagus"
authors = [{name="K. Toepfer", email="kai.toepfer@unibas.ch"},
           {name="L.I.Vazquez-Salazar", email="luisitza.vazquezsalazar@unibas.ch"},
           {name="Valerii Andreichev", email="valerii.andreichev@unibas.ch"},
           {name="Silvan Kaeser", email="silvan.kaeser@unibas.ch"},]
dynamic = ["version", "description"]
dependencies = [
        'ase',
        'numpy',
        'scipy',
        'ctype',
        'torch>2.0',
        'torchvision',
        'torchaudio',
        'torch-ema>=0.3',
        'tensorboard',
        'pandas',
        'h5py',
        'matplotlib',
        'seaborn',
        'pytest']
[project.urls]
homepage = "http://github.com/LIVazquez/Asparagus"
documentation = "http://Asparagus-bundle.readthedocs.io/en/latest/"
