[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "asparagus"
version = "0.5.0"
authors = [{name="K. Toepfer", email="kai.toepfer@unibas.ch"},
           {name="L.I.Vazquez-Salazar", email="luisitza.vazquezsalazar@unibas.ch"},
           {name="Valerii Andreichev", email="valerii.andreichev@unibas.ch"},
           {name="Silvan Kaeser", email="silvan.kaeser@unibas.ch"},]
dynamic = ["description"]
dependencies = [
        'ase==3.22.1',
        'numpy',
        'scipy',
        'ctype',
        'torch>2.1',
        'torchvision',
        'torchaudio',
        'torch-ema',
        'tensorboard',
        'pandas',
        'h5py',
        'matplotlib',
        'seaborn',
        'pytest']

[project.urls]
homepage = "https://github.com/MMunibas/Asparagus/releases"
documentation = "http://Asparagus-bundle.readthedocs.io/en/latest/"
